<resources>
    <string name="app_name">MyFlexboxLayout</string>

    <string name="flex_direction" translatable="false">Flex Direction</string>
    <string name="flex_wrap" translatable="false">Flex Wrap</string>
    <string name="justify_content" translatable="false">Justify Content</string>
    <string name="align_items" translatable="false">Align Items</string>
    <string name="align_content" translatable="false">Align Content</string>

    <string name="row" translatable="false">Row</string>
    <string name="row_reverse" translatable="false">Row Reverse</string>
    <string name="column" translatable="false">Column</string>
    <string name="column_reverse" translatable="false">Column Reverse</string>
    <string name="nowrap" translatable="false">Nowrap</string>
    <string name="wrap" translatable="false">Wrap</string>
    <string name="wrap_reverse" translatable="false">Wrap Reverse</string>
    <string name="flex_start" translatable="false">Flex Start</string>
    <string name="flex_end" translatable="false">Flex End</string>
    <string name="center" translatable="false">Center</string>
    <string name="space_between" translatable="false">Space Between</string>
    <string name="space_around" translatable="false">Space Around</string>
    <string name="baseline" translatable="false">Baseline</string>
    <string name="stretch" translatable="false">Stretch</string>
    <string name="auto" translatable="false">Auto</string>

    <string-array translatable="false" name="array_flex_direction">
        <item>@string/row</item>
        <item>@string/row_reverse</item>
        <item>@string/column</item>
        <item>@string/column_reverse</item>
    </string-array>

    <string-array translatable="false" name="array_flex_wrap">
        <item>@string/nowrap</item>
        <item>@string/wrap</item>
        <item>@string/wrap_reverse</item>
    </string-array>

    <string-array translatable="false" name="array_justify_content">
        <item>@string/flex_start</item>
        <item>@string/flex_end</item>
        <item>@string/center</item>
        <item>@string/space_between</item>
        <item>@string/space_around</item>
    </string-array>

    <string-array translatable="false" name="array_align_items">
        <item>@string/flex_start</item>
        <item>@string/flex_end</item>
        <item>@string/center</item>
        <item>@string/baseline</item>
        <item>@string/stretch</item>
    </string-array>

    <string-array translatable="false" name="array_align_content">
        <item>@string/flex_start</item>
        <item>@string/flex_end</item>
        <item>@string/center</item>
        <item>@string/space_between</item>
        <item>@string/space_around</item>
        <item>@string/stretch</item>
    </string-array>

    <string-array translatable="false" name="array_align_self">
        <item>@string/auto</item>
        <item>@string/flex_start</item>
        <item>@string/flex_end</item>
        <item>@string/center</item>
        <item>@string/baseline</item>
        <item>@string/stretch</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_flex_items_default">Default values for new flex items</string>
    <string name="new_flex_items_default_key" translatable="false">new_flex_items_default_key</string>
    <string name="new_flex_item_order_key" translatable="false">new_flex_item_order_key</string>
    <string name="new_flex_grow_key" translatable="false">new_flex_grow_key</string>
    <string name="new_flex_shrink_key" translatable="false">new_flex_shrink_key</string>
    <string name="new_flex_basis_percent_key" translatable="false">new_flex_basis_percent_key</string>
    <string name="flex_basis_percent" translatable="false">Flex Basis Percent</string>
    <string name="flex_basis_percent_summary">(-1: not set)</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="size_unit_summary">(-1: match_parent, -2: wrap_content)</string>
    <string name="new_width_key" translatable="false">new_width_key</string>
    <string name="new_height_key" translatable="false">new_height_key</string>

</resources>
